2003-07-23  Martin Willemoes Hansen <mwh@sysrq.dk>

	* dia/Point.custom: Added, convenience ctor
	  and ToString()
	* dia/CanvasLine.custom: Added, default ctor
	* dia/CanvasBox.custom: Added, default ctor
	* dia/CanvasImage.custom: Added, default ctor
	* dia/CanvasItem.custom: Removed method to create CanvasImage
	* sources/Dia.metadata: rule disable default constructor added
	* sample/sample.cs: Added section for programatically 
	  canvas item creation.
	
2003-07-22  Martin Willemoes Hansen <mwh@sysrq.dk>
	
	* PROBLEMS: Added
	* sources/Dia.metadata: Hide DiaExpression type, 
	  and hide the AddExpression method in DiaConstraint
	* doc/en/Dia/Expression.xml: Removed

2003-07-21  Martin Willemoes Hansen <mwh@sysrq.dk>

	* ChangeLog: Added
	* dia/Event.cs: Added 
	* glue/dia-event.c Added
	