@@ -6,7 +6,9 @@
 //
 // This code is inserted after the automatically generated code.
 
-public CanvasImage() {
+public CanvasImage (Gdk.Pixbuf pixbuf) {
         Raw = CanvasItem.ItemCreate (CanvasImage.GType).Handle;
+	Image = pixbuf;
+	Width = pixbuf.Width;
+	Height = pixbuf.Height;
 }
-
